--- a/strawberry/package.json
+++ b/strawberry/package.json
@@ -29,6 +29,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "recharts": "^2.15.4",
     "shiki": "^3.13.0",
     "tailwind-merge": "^3.3.1"
   },
